--- a/config/caddy/Caddyfile
+++ b/config/caddy/Caddyfile
@@ -13,21 +13,22 @@
 
 apps.ge.dipvvf.it {
   import ssl_certs
-  reverse_proxy whoami:8000
+  root * /web/
+  file_server browse
 }
 
 grist.ge.dipvvf.it {
   import ssl_certs
-  reverse_proxy /whoami whoami:8000
-  reverse_proxy grist:8484
+  reverse_proxy /whoami whoami:{$WHOAMI_PORT}
+  reverse_proxy grist:{$GRIST_PORT}
 }
 
 dex.ge.dipvvf.it {
   import ssl_certs
-  reverse_proxy dex:5556
+  reverse_proxy dex:{$DEX_PORT}
 }
 
 nodered.ge.dipvvf.it {
   import ssl_certs
-  reverse_proxy nodered:1880
+  reverse_proxy nodered:{$NODERED_PORT}
 }
