--- a/config/dex/config.yaml
+++ b/config/dex/config.yaml
@@ -1,4 +1,4 @@
-issuer: "https://{{ .Env.DEX_DOMAIN }}"
+issuer: "https://dex.{{ .Env.DOMAIN }}"
 
 storage:
   type: sqlite3
@@ -6,14 +6,14 @@ storage:
     file: /var/dex/dex.db
 
 web:
-  http: "0.0.0.0:{{ .Env.DEX_PORT }}"
+  http: "0.0.0.0:5556"
 
 logger:
-  level: "debug"
+  level: "{{ .Env.DEX_LOGLEVEL }}"
   format: "text"
 
 frontend:
-  issuer: "{{ getenv "DEX_FRONTEND_ISSUER" }}"
+  issuer: "Welcome"
   logoURL: '{{ getenv "DEX_LOGO_URL" }}'
   theme: "light"
 
@@ -25,15 +25,15 @@ staticClients:
   - name: "Grist"
     id: "grist"
     secret: "{{ .Env.GRIST_OAUTH_CLIENT_SECRET }}"
-    redirectURIs: ["https://{{ .Env.GRIST_DOMAIN }}/oauth2/callback"]
+    redirectURIs: ["https://grist.{{ .Env.DOMAIN }}/oauth2/callback"]
 
-{{ $test := .Env.DEX_ADMIN }}
+{{ $test := .Env.DEX_ADMIN_ONLY }}
 {{ if eq $test "true" }}
 enablePasswordDB: true
 staticPasswords:
   - username: "admin"
-    email: "{{ .Env.DEX_ADMIN_USER_EMAIL }}"
-    hash: "{{ .Env.DEX_ADMIN_USER_PASSWORD_HASH }}"
+    email: "{{ .Env.ADMIN_EMAIL }}"
+    hash: "{{ .Env.DEFAULT_PASSWORD_HASH }}"
 {{ else }}
 connectors:
 - type: smtp
